--- a/Project2/src/utils/Makefile
+++ b/Project2/src/utils/Makefile
@@ -1,11 +1,15 @@
 all: setitimer-helper squish-pty squish-unix
 
-CC = gcc
-CFLAGS = -Wall -W
-LOADLIBES = -lm
-setitimer-helper: setitimer-helper.o
-squish-pty: squish-pty.o
-squish-unix: squish-unix.o
+LDFLAGS = -lm
+
+setitimer-helper: setitimer-helper.c
+	gcc -o setitimer-helper setitimer-helper.c $(LDFLAGS)
+
+squish-pty: squish-pty.c
+	gcc -o squish-pty squish-pty.c $(LDFLAGS)
+
+squish-unix: squish-unix.c
+	gcc -o squish-unix squish-unix.c $(LDFLAGS)
 
 clean: 
 	rm -f *.o setitimer-helper squish-pty squish-unix
